[package]
name = "radscanner"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1", features = ["full"] }
tokio-io-timeout = { version = "1.2.0" }
craftping = { version = "0.4.1", features = ["async-tokio"] }
elytra-ping = { git = "https://github.com/doinkythederp/elytra-ping.git", version = "1.3.1" }
try-catch = "0.2.2"
colored = "2.0.4"