[package]
name = "radscanner"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1", features = ["full"] }
elytra-ping = { git = "https://github.com/doinkythederp/elytra-ping.git", version = "1.3.1" }
colored = "2.0.4"
mongodb = "2.6.1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
webhook = "2.1.2"